Spacing fixes on home page, navigation update

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -73,7 +73,7 @@ h6 {
     color: var(--secondary) !important;
 }
 
-@media (max-width: 768px) { 
+@media (max-width: 768px) {
     .navbar-nav {
         justify-content: center;
     }
@@ -112,6 +112,7 @@ h6 {
         width: 100vw;
     }
 }
+
 /* End navbar */
 
 .blur-bg {
@@ -132,3 +133,77 @@ h6 {
     height: 81px;
 }
 
+/* Font Scaling */
+/* @link https://utopia.fyi/type/calculator?c=320,16,1.2,1920,30,1.25,5,2,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l */
+
+:root {
+    --fluid-min-width: 320;
+    --fluid-max-width: 1920;
+
+    --fluid-screen: 100vw;
+    --fluid-bp: calc((var(--fluid-screen) - var(--fluid-min-width) / 16 * 1rem) / (var(--fluid-max-width) - var(--fluid-min-width)));
+}
+
+@media screen and (min-width: 1920px) {
+    :root {
+        --fluid-screen: calc(var(--fluid-max-width) * 1px);
+    }
+}
+
+:root {
+    --f--2-min: 11.11;
+    --f--2-max: 19.20;
+    --step--2: calc(((var(--f--2-min) / 16) * 1rem) + (var(--f--2-max) - var(--f--2-min)) * var(--fluid-bp));
+
+    --f--1-min: 13.33;
+    --f--1-max: 24.00;
+    --step--1: calc(((var(--f--1-min) / 16) * 1rem) + (var(--f--1-max) - var(--f--1-min)) * var(--fluid-bp));
+
+    --f-0-min: 16.00;
+    --f-0-max: 30.00;
+    --step-0: calc(((var(--f-0-min) / 16) * 1rem) + (var(--f-0-max) - var(--f-0-min)) * var(--fluid-bp));
+
+    --f-1-min: 19.20;
+    --f-1-max: 37.50;
+    --step-1: calc(((var(--f-1-min) / 16) * 1rem) + (var(--f-1-max) - var(--f-1-min)) * var(--fluid-bp));
+
+    --f-2-min: 23.04;
+    --f-2-max: 46.88;
+    --step-2: calc(((var(--f-2-min) / 16) * 1rem) + (var(--f-2-max) - var(--f-2-min)) * var(--fluid-bp));
+
+    --f-3-min: 27.65;
+    --f-3-max: 58.59;
+    --step-3: calc(((var(--f-3-min) / 16) * 1rem) + (var(--f-3-max) - var(--f-3-min)) * var(--fluid-bp));
+
+    --f-4-min: 33.18;
+    --f-4-max: 73.24;
+    --step-4: calc(((var(--f-4-min) / 16) * 1rem) + (var(--f-4-max) - var(--f-4-min)) * var(--fluid-bp));
+
+    --f-5-min: 39.81;
+    --f-5-max: 91.55;
+    --step-5: calc(((var(--f-5-min) / 16) * 1rem) + (var(--f-5-max) - var(--f-5-min)) * var(--fluid-bp));
+}
+
+h1 {
+    font-size: var(--step-5);
+}
+
+h2 {
+    font-size: var(--step-4);
+}
+
+h3 {
+    font-size: var(--step-3);
+}
+
+h4 {
+    font-size: var(--step-2);
+}
+
+h5 {
+    font-size: var(--step-1);
+}
+
+h6 {
+    font-size: var(--step-0);
+}
