--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,11 +1,3 @@
-html {
-    scroll-snap-type: y mandatory;
-}
-
-.scroll-snap {
-    scroll-snap-align: start;
-}
-
 /* Landing Section */
 #landing {
     background-image: url("../img/peyto_lake.jpg");
@@ -49,9 +41,8 @@ html {
     width: 100%;
     min-height: 100vh;
     padding-top: 81px;
+    background: #222;
 }
-
-/* test */
 
 #cards-container {
     width: 100%;
@@ -184,4 +175,17 @@ html {
     to {
         visibility: hidden;
     }
+}
+
+.line {
+    background-color: white;
+    width: 100%;
+    height: 1px;
+}
+
+.btn {
+    font-size: var(--step--2);
+    padding-left: 0;
+    padding-right: 0;
+    width: 45%;
 }
